# restringer-rs

./: .gitignore  Cargo.toml  OBFUSCATION_PATTERNS_TODO.md  run_tests.bat
.github/workflows/: rust-compile.yml
src/: lib.rs  main.rs
src/transforms/safe/: detect_webpack_bundle.rs  fold_string_concatenation.rs  fold_string_from_char_codes.rs  mod.rs  normalize_computed.rs  normalize_empty_statements.rs  normalize_typeof_comparisons.rs  normalize_void0.rs  normalize_webpack_require_var_to_const.rs  parse_template_literals_into_string_literals.rs  rearrange_sequences.rs  rearrange_switches.rs  remove_redundant_block_statements.rs  replace_boolean_expressions_with_if.rs  replace_call_expressions_with_unwrapped_identifier.rs  replace_eval_calls_with_literal_content.rs  replace_function_return_this.rs  replace_function_shells_with_wrapped_value.rs  replace_function_shells_with_wrapped_value_iife.rs  replace_identifier_with_fixed_assigned_value.rs  replace_identifier_with_fixed_value_not_assigned_at_declaration.rs  replace_new_func_calls_with_literal_content.rs  replace_sequences_with_expressions.rs  resolve_deterministic_if_statements.rs  resolve_dispatch_table_calls.rs  resolve_function_constructor_calls.rs  resolve_member_expression_references_to_array_index.rs  resolve_member_expressions_with_direct_assignment.rs  resolve_proxy_calls.rs  resolve_proxy_references.rs  resolve_proxy_variables.rs  rewrite_for_loop_to_foreach.rs  (+19 more)
testing/: core_deobf.js
tests/: app_deobf.js  diff_test.bat  run_transform.bat  safe_batch1.rs  safe_batch2.rs  safe_transforms.rs  transform.diff
